Fix page horizontal overflow

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -304,7 +304,7 @@
         </div>
       </div>
 
-      <div class="row donation-list">
+      <div class="donation-list">
         <img src="./img/donations/g1.png" data-clipboard-text="9zYLSQFo6rTWweSBmPGQvPxmtCo3xpYw7qXmV9ie9omw">
         <img src="./img/donations/ark.png" data-clipboard-text="ASSRvwixbSmMGjWuJYnEtAdEiErM7acTZR">
         <img src="./img/donations/eth.png" data-clipboard-text="0xe5D08beA03e776B54508CF96db99745Cd464140D">
