--- a/static/css/main.css
+++ b/static/css/main.css
@@ -395,6 +395,7 @@ h2 {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  cursor: pointer;
 }
 
 #donation .donation-list img {
