Add link noopener attributes

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -127,10 +127,10 @@
               Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
               <br/> Nous avons également mis en place un
-              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noreferrer" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener noreferrer" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
               <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
               <br/>
-              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noreferrer">
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener noreferrer">
                 <span class="fa-stack fa-2x wallet-icon" data-toggle="tooltip" title="Lien vers le portefeuille virtuel">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-wallet fa-stack-1x fa-inverse"></i>
@@ -255,7 +255,7 @@
       <div class="row partner-list">
 
         <div class="card unikname">
-          <a href="https://www.unikname.com" target="_blank" rel="noreferrer">
+          <a href="https://www.unikname.com" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top" src="./img/partner/unikname.png">
             <div class="overlay rounded-circle">
               <p class="text">Unikname</p>
@@ -264,7 +264,7 @@
         </div>
 
         <div class="card unsnetwork">
-          <a href="https://www.uns.network" target="_blank" rel="noreferrer">
+          <a href="https://www.uns.network" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top rounded-circle" src="./img/partner/unsnetwork.png">
             <div class="overlay rounded-circle">
               <p class="text">UNS Network</p>
@@ -273,7 +273,7 @@
         </div>
 
         <div class="card novapuls">
-          <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
+          <a href="http://novapuls.fr/" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top" src="./img/partner/novapuls.png">
             <div class="overlay rounded-circle">
               <p class="text">Novapuls</p>
@@ -282,7 +282,7 @@
         </div>
 
         <div class="card pld">
-          <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
+          <a href="http://novapuls.fr/" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top" src="./img/partner/pld.png">
             <div class="overlay rounded-circle">
               <p class="text">Pays de Loire Dévelopment</p>
@@ -330,7 +330,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
             <a href="https://join.slack.com/t/meetup-blockchain/shared_invite/enQtMzAwOTA5MDI1Njk3LTg2NGJkNTlkYWY0Njc0YzlkMWMxZmVjZmFiOGI2YTE3M2RlMGMzNzdlYzUyYmNhOTJiZGFjYjY4ODQ5NTAwY2I"
-              target="_blank" rel="noreferrer">
+              target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
                 Notre groupe
@@ -342,7 +342,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://twitter.com/Blockchain44" target="_blank" rel="noreferrer">
+            <a href="https://twitter.com/Blockchain44" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre fil
@@ -354,7 +354,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://github.com/BlockchainEtSociete" target="_blank" rel="noreferrer">
+            <a href="https://github.com/BlockchainEtSociete" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-github text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Nos projets
@@ -366,7 +366,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.meetup.com/Blockchain-Societe-Nantes" target="_blank" rel="noreferrer">
+            <a href="https://www.meetup.com/Blockchain-Societe-Nantes" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre groupe
@@ -392,7 +392,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.facebook.com/groups/822513524759506/" target="_blank" rel="noreferrer">
+            <a href="https://www.facebook.com/groups/822513524759506/" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-facebook-f text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre groupe
@@ -404,7 +404,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.linkedin.com/company/blockchain-et-societe" target="_blank" rel="noreferrer">
+            <a href="https://www.linkedin.com/company/blockchain-et-societe" target="_blank" rel="noopener noreferrer">
               <i class="fab fa-4x fa-linkedin text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre page
@@ -426,7 +426,7 @@
     </div>
     <hr>
     <div class="mx-auto text-center">
-      Blockchain et Société, <a href="https://www.journal-officiel.gouv.fr/association/index.php?ACTION=Rechercher&HI_PAGE=1&HI_COMPTEUR=0&original_method=get&WHAT=&JTH_ID=&JAN_BD_CP=&JRE_ID=&JAN_LIEU_DECL=&JTY_ID=&JTY_WALDEC=W442019317&JTY_SIREN=&JPA_D_D=&JPA_D_F=&rechercher.x=35&rechercher.y=14" target="_blank" rel="noreferrer">association loi 1901</a>
+      Blockchain et Société, <a href="https://www.journal-officiel.gouv.fr/association/index.php?ACTION=Rechercher&HI_PAGE=1&HI_COMPTEUR=0&original_method=get&WHAT=&JTH_ID=&JAN_BD_CP=&JRE_ID=&JAN_LIEU_DECL=&JTY_ID=&JTY_WALDEC=W442019317&JTY_SIREN=&JPA_D_D=&JPA_D_F=&rechercher.x=35&rechercher.y=14" target="_blank" rel="noopener noreferrer">association loi 1901</a>
     </div>
     <div class="mx-auto text-center mt-1">
       16 rue Maurice Daniel, 44200 Nantes
