Fix broken links. Add GitHub repo link

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -273,7 +273,7 @@
         </div>
 
         <div class="card novapuls">
-          <a href="http://novapuls.fr/" target="_blank" rel="noopener noreferrer">
+          <a href="https://novapuls.fr/" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top" src="./img/partner/novapuls.png">
             <div class="overlay rounded-circle">
               <p class="text">Novapuls</p>
@@ -282,10 +282,10 @@
         </div>
 
         <div class="card pld">
-          <a href="http://novapuls.fr/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.paysdelaloire.fr/les-aides/pays-de-la-loire-developpement" target="_blank" rel="noopener noreferrer">
             <img class="card-img-top" src="./img/partner/pld.png">
             <div class="overlay rounded-circle">
-              <p class="text">Pays de Loire Dévelopment</p>
+              <p class="text">Pays de la Loire Dévelopment</p>
             </div>
           </a>
         </div>
@@ -421,12 +421,14 @@
   <footer class="container-fluid">
     <div class="mx-auto text-center">
       Homemade with
-      <span class="fa fa-heart"></span>
-      by ourselves
+      <span class="fa fa-heart mx-1"></span>
+      <a href="https://github.com/BlockchainEtSociete/blockchainsociete.org" target="_blank" rel="noopener noreferrer">
+        by ourselves
+      </a>
     </div>
     <hr>
     <div class="mx-auto text-center">
-      Blockchain et Société, <a href="https://www.journal-officiel.gouv.fr/association/index.php?ACTION=Rechercher&HI_PAGE=1&HI_COMPTEUR=0&original_method=get&WHAT=&JTH_ID=&JAN_BD_CP=&JRE_ID=&JAN_LIEU_DECL=&JTY_ID=&JTY_WALDEC=W442019317&JTY_SIREN=&JPA_D_D=&JPA_D_F=&rechercher.x=35&rechercher.y=14" target="_blank" rel="noopener noreferrer">association loi 1901</a>
+      Blockchain et Société, <a href="https://www.journal-officiel.gouv.fr/associations/detail-annonce/associations_b/20180008/763" target="_blank" rel="noopener noreferrer">association loi 1901</a>
     </div>
     <div class="mx-auto text-center mt-1">
       16 rue Maurice Daniel, 44200 Nantes
