chore: update publishing director name

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -434,10 +434,10 @@
       16 rue Maurice Daniel, 44200 Nantes
     </div>
     <div class="mx-auto text-center mt-1">
-      Directeur de la publication : Laurent Lourenço
+      Directeur de la publication : Damien Lecan
     </div>
     <div class="mx-auto text-center mt-1">
-      Site hébergé par Github Inc, San Francisco
+      Site hébergé par Netlify, Inc., San Francisco, California
     </div>
   </footer>
 
