chore: remove Unikname and Space Elephant sponsors

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -247,30 +247,12 @@
         <div class="col text-center section-title">
           <h2 class="text-white">
             <i class="fas fa-link"></i>
-            Nos sponsors</h2>
+            Ils nous soutiennent</h2>
           <hr class="light my-4">
         </div>
       </div>
 
       <div class="row partner-list">
-
-        <div class="card unikname">
-          <a href="https://www.unikname.com" target="_blank" rel="noopener noreferrer">
-            <img class="card-img-top" src="./img/partner/unikname.png">
-            <div class="overlay rounded-circle">
-              <p class="text">Unikname</p>
-          </div>
-          </a>
-        </div>
-
-        <div class="card unsnetwork">
-          <a href="https://www.uns.network" target="_blank" rel="noopener noreferrer">
-            <img class="card-img-top rounded-circle" src="./img/partner/unsnetwork.png">
-            <div class="overlay rounded-circle">
-              <p class="text">UNS Network</p>
-            </div>
-          </a>
-        </div>
 
         <div class="card novapuls">
           <a href="https://novapuls.fr/" target="_blank" rel="noopener noreferrer">
