feat(team): clean old team members

--- a/layouts/partials/home-team.html
+++ b/layouts/partials/home-team.html
@@ -38,22 +38,12 @@
         </div>
       </div>
 
-      <div class="card">
-        <img
-          class="card-img-top rounded-circle"
-          src="./img/team/bpr.jpg"
-        />
-        <div class="card-body">
-          <p class="card-text">Bertrand Presles</p>
-        </div>
-      </div>
-
       <div class="w-100"></div>
 
       <div class="card">
-        <img class="card-img-top rounded-circle" src="./img/team/nla.jpg" />
+        <img class="card-img-top rounded-circle" src="./img/team/bpr.jpg" />
         <div class="card-body">
-          <p class="card-text">Nicolas LAUNAY</p>
+          <p class="card-text">Bertrand Presles</p>
         </div>
       </div>
 
