feat: remove Nantes references

--- a/layouts/partials/home-about.html
+++ b/layouts/partials/home-about.html
@@ -10,8 +10,7 @@
       <div class="row">
         <p>
           Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger Technologies au
-          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique Nantaise
-          sur le sujet.
+          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique sur le sujet.
         </p>
         <p>
           A ce titre, nous organisons des meetups Blockchain et Société composés de deux tracks principales :
@@ -41,7 +40,7 @@
             </div>
             <hr>
             <p class="body">
-              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
+              Ces sessions ont pour objectif de réunir les cryptomaniacs afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
               <br/> Nous avons également mis en place un
               <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener noreferrer" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
