feat: add youtube channel

--- a/layouts/partials/home-networks.html
+++ b/layouts/partials/home-networks.html
@@ -21,8 +21,6 @@
           >
             <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
             <h3 class="mb-3">
-              Notre groupe
-              <br />
               <strong>Slack</strong>
             </h3>
           </a>
@@ -37,8 +35,6 @@
           >
             <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Notre fil
-              <br />
               <strong>Twitter</strong>
             </h3>
           </a>
@@ -53,8 +49,6 @@
           >
             <i class="fab fa-4x fa-github text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Nos projets
-              <br />
               <strong>Github</strong>
             </h3>
           </a>
@@ -69,8 +63,6 @@
           >
             <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Notre groupe
-              <br />
               <strong>Meetup</strong>
             </h3>
           </a>
@@ -78,19 +70,35 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-md-6 text-center">
+      <div class="col-lg-3 col-md-6 text-center">
         <div class="network-box mt-5 mx-auto">
-          <a href="mailto:contact@blockchainsociete.org">
-            <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
+          <a
+            href="https://www.youtube.com/channel/UCLxvA3g5oqdItCMvO6Scfhg"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-4x fa-youtube text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Notre email
-              <br />
-              <strong>de contact</strong>
+              <strong>Youtube</strong>
             </h3>
           </a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 text-center">
+      <div class="col-lg-3 col-md-6 text-center">
+        <div class="network-box mt-5 mx-auto">
+          <a
+            href="mailto:contact@blockchainsociete.org"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">
+              <strong>Email</strong>
+            </h3>
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 text-center">
         <div class="network-box mt-5 mx-auto">
           <a
             href="https://www.facebook.com/groups/822513524759506/"
@@ -99,14 +107,12 @@
           >
             <i class="fab fa-4x fa-facebook-f text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Notre groupe
-              <br />
               <strong>Facebook</strong>
             </h3>
           </a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 text-center">
+      <div class="col-lg-3 col-md-6 text-center">
         <div class="network-box mt-5 mx-auto">
           <a
             href="https://www.linkedin.com/company/blockchain-et-societe"
@@ -115,8 +121,6 @@
           >
             <i class="fab fa-4x fa-linkedin text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">
-              Notre page
-              <br />
               <strong>Linkedin</strong>
             </h3>
           </a>
