fix: small ui bugs

--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -18,7 +18,7 @@
       </div>
       <p class="opacity-60">{{ .Site.Params.homepage.social.description }}</p>
     </div>
-    <ul class="flex justify-center gap-4">
+    <ul class="flex flex-wrap justify-center gap-4">
       {{ with .Site.Params.social.twitter }}
       <li>
         <a
