--- a/themes/custom-blist/layouts/partials/header.html
+++ b/themes/custom-blist/layouts/partials/header.html
@@ -2,11 +2,12 @@
   class="
     container
     flex
-    justify-around
-    md:justify-between
+    justify-between
     gap-4
     flex-wrap
-    p-6
+    py-6
+    px-4
+    md:px-6
     mx-auto
   "
 >
