--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -1,7 +1,7 @@
 <section id="events">
   <div class="py-12 flex flex-col items-center justify-center">
     <div class="flex flex-col items-center mb-10">
-      <div class="text-4xl font-extrabold mb-3">
+      <div class="text-4xl font-extrabold mb-3 text-center">
         {{ .Site.Params.homepage.events.title }}
       </div>
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
