--- a/themes/custom-blist/layouts/partials/scripts.html
+++ b/themes/custom-blist/layouts/partials/scripts.html
@@ -1,7 +1,10 @@
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 <script type="text/javascript">
-  particlesJS.load("particles", "/assets/particles.json", function () {
-    console.log("callback - particles.js config loaded");
-  });
+  const tagId = "particles";
+  if (!!document.getElementById(tagId)) {
+    particlesJS.load(tagId, "/assets/particles.json", function () {
+      console.log("callback - particles.js config loaded");
+    });
+  }
 </script>
