--- a/themes/custom-blist/layouts/partials/footer.html
+++ b/themes/custom-blist/layouts/partials/footer.html
@@ -1,62 +1,78 @@
 <footer class="container p-6 mx-auto flex justify-between items-center">
-  <span class="text-sm font-light">
-    {{ if (isset .Site.Params "copyright") }}
+  <div class="flex flex-row flex-wrap gap-1 font-light text-xs">
+    <!-- {{ if (isset .Site.Params "copyright") }}
     {{ .Site.Params.copyright }}
     {{ else }}
     {{ dateFormat "2006" now }} © {{ .Site.Title }}
-    {{ end }}
-  </span>
-  <span onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="p-1 cursor-pointer">
-    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5"
-      stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    {{ end }} -->
+    <span>Copyright © 2021 - Blockchain et Société, association loi 1901</span>
+    <span class="font-extralight text-gray-600"
+      >16 rue Maurice Daniel, 44200 Nantes</span
+    >
+    <span class="font-extralight text-gray-600"
+      >Directeur de la publication : Damien Lecan</span
+    >
+    <span class="font-extralight text-gray-600"
+      >Site hébergé par Netlify, Inc., San Francisco California</span
+    >
+  </div>
+  <span
+    onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+    class="p-1 cursor-pointer"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="30"
+      height="30"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
       <path stroke="none" d="M0 0h24v24H0z" fill="none" />
       <path d="M18 15l-6 -6l-6 6h12" />
     </svg>
   </span>
 </footer>
 
-{{ if .Site.Params.enableSearch }}
-{{- partial "search-ui.html" . -}}
-{{ end }}
-
-{{ template "_internal/google_analytics_async.html" . }}
-
-{{ if ge (len .Site.Languages) 3 }}
+{{ if .Site.Params.enableSearch }} {{- partial "search-ui.html" . -}} {{ end }}
+{{ template "_internal/google_analytics_async.html" . }} {{ if ge (len
+.Site.Languages) 3 }}
 <script>
-  const languageMenuButton = document.querySelector('.language-switcher');
-  const languageDropdown = document.querySelector('.language-dropdown');
-  languageMenuButton.addEventListener('click', (evt) => {
-    evt.preventDefault()
-    if (languageDropdown.classList.contains('hidden')) {
-      languageDropdown.classList.remove('hidden')
-      languageDropdown.classList.add('flex')
+  const languageMenuButton = document.querySelector(".language-switcher");
+  const languageDropdown = document.querySelector(".language-dropdown");
+  languageMenuButton.addEventListener("click", (evt) => {
+    evt.preventDefault();
+    if (languageDropdown.classList.contains("hidden")) {
+      languageDropdown.classList.remove("hidden");
+      languageDropdown.classList.add("flex");
     } else {
-      languageDropdown.classList.add('hidden');
-      languageDropdown.classList.remove('flex');
+      languageDropdown.classList.add("hidden");
+      languageDropdown.classList.remove("flex");
     }
-  })
+  });
 </script>
-{{ end }}
-
-{{ if .Site.Params.darkModeToggle }}
+{{ end }} {{ if .Site.Params.darkModeToggle }}
 <script>
   // On page load or when changing themes
-  const darkmode = document.querySelector('.toggle-dark-mode');
+  const darkmode = document.querySelector(".toggle-dark-mode");
   function toggleDarkMode() {
-    if (document.documentElement.classList.contains('dark')) {
-      document.documentElement.classList.remove('dark')
-      localStorage.setItem('darkmode', 'light')
+    if (document.documentElement.classList.contains("dark")) {
+      document.documentElement.classList.remove("dark");
+      localStorage.setItem("darkmode", "light");
     } else {
-      document.documentElement.classList.add('dark')
-      localStorage.setItem('darkmode', 'dark')
+      document.documentElement.classList.add("dark");
+      localStorage.setItem("darkmode", "dark");
     }
   }
   if (darkmode) {
-    darkmode.addEventListener('click', toggleDarkMode);
+    darkmode.addEventListener("click", toggleDarkMode);
   }
 
-  const isDark = localStorage.getItem('darkmode');
-  if (isDark && isDark === 'dark') {
+  const isDark = localStorage.getItem("darkmode");
+  if (isDark && isDark === "dark") {
     toggleDarkMode();
   }
 </script>
