feat: add sponsors

--- a/themes/custom-blist/layouts/index.html
+++ b/themes/custom-blist/layouts/index.html
@@ -4,4 +4,5 @@
   <!-- {{- partial "homepage/posts.html" . -}} -->
   {{- partial "homepage/team.html" . -}}
   {{- partial "homepage/social.html" . -}}
+  {{- partial "homepage/support.html" . -}}
 {{ end }}
