--- a/themes/custom-blist/layouts/partials/components/button.html
+++ b/themes/custom-blist/layouts/partials/components/button.html
@@ -1,9 +1,11 @@
+{{ $color := (.color | default "indigo") }}
+
 <button
   type="button"
   class="
     px-8
     py-2.5
-    bg-indigo-600
+    bg-{{$color}}-600
     text-white
     font-medium
     text-sm
@@ -11,9 +13,9 @@
     uppercase
     rounded-full
     shadow-md
-    hover:bg-blue-700 hover:shadow-lg
-    focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0
-    active:bg-blue-800 active:shadow-lg
+    hover:bg-{{$color}}-700 hover:shadow-lg
+    focus:bg-{{$color}}-700 focus:shadow-lg focus:outline-none focus:ring-0
+    active:bg-{{$color}}-800 active:shadow-lg
     transition
     duration-150
     ease-in-out
