--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -35,9 +35,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -74,9 +72,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -115,9 +111,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -154,9 +148,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -195,9 +187,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -234,9 +224,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -273,9 +261,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -313,9 +299,7 @@
             hover:text-gray-800 hover:border-gray-800
             cursor-pointer
             transition-colors
-            dark:text-white
-            dark:hover:border-gray-300
-            dark:hover:text-gray-300
+            dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300
           "
         >
           <svg
@@ -341,4 +325,4 @@
       {{ end }}
     </ul>
   </div>
-</div>
+</section>
