fix: button background color

--- a/themes/custom-blist/layouts/partials/homepage/support.html
+++ b/themes/custom-blist/layouts/partials/homepage/support.html
@@ -77,16 +77,15 @@
             href="https://explorer.ark.io/wallets/ASSRvwixbSmMGjWuJYnEtAdEiErM7acTZR"
             target="_blank"
             rel="noopener noreferrer"
-          >
-            {{ partial "partials/components/button" (dict "label" "ARK" "color"
-            "red" ) }}
+            >{{ partial "partials/components/button" (dict "label" "ARK" "color"
+            "bg-red-600" ) }}
           </a>
           <a
             href="https://www.blockchain.com/btc/address/3E8kKYXZEuwnHmWz9VQhksFN5f65WQ5PWp"
             target="_blank"
             rel="noopener noreferrer"
             >{{ partial "partials/components/button" (dict "label" "BTC" "color"
-            "yellow" ) }}
+            "bg-yellow-400" ) }}
           </a>
           <a
             target="_blank"
@@ -94,20 +93,20 @@
             href="9zYLSQFo6rTWweSBmPGQvPxmtCo3xpYw7qXmV9ie9omw"
           >
             {{ partial "partials/components/button" (dict "label" "Ğ1" "color"
-            "blue" ) }}</a
+            "bg-blue-400" ) }}</a
           ><a
             href="https://etherscan.io/address/0xe5D08beA03e776B54508CF96db99745Cd464140D"
             target="_blank"
             rel="noopener noreferrer"
             >{{ partial "partials/components/button" (dict "label" "ETHER"
-            "color" "gray" ) }}</a
+            "color" "bg-gray-500" ) }}</a
           ><a
             href="https://bit.ly/don-bets"
             target="_blank"
             rel="noopener noreferrer"
           >
             {{ partial "partials/components/button" (dict "label" "EURO" "color"
-            "green" ) }}</a
+            "bg-green-400" ) }}</a
           >
         </div>
       </div>
