--- a/themes/custom-blist/layouts/partials/components/button.html
+++ b/themes/custom-blist/layouts/partials/components/button.html
@@ -1,11 +1,9 @@
-{{ $color := (.color | default "indigo") }}
-
 <button
   type="button"
   class="
     px-8
     py-2.5
-    bg-{{$color}}-600
+    {{ .color | default "bg-indigo-600" }}
     text-white
     font-medium
     text-sm
@@ -13,9 +11,8 @@
     uppercase
     rounded-full
     shadow-md
-    hover:bg-{{$color}}-700 hover:shadow-lg
-    focus:bg-{{$color}}-700 focus:shadow-lg focus:outline-none focus:ring-0
-    active:bg-{{$color}}-800 active:shadow-lg
+    hover:opacity-80 hover:shadow-lg
+    focus:opacity-80 focus:shadow-lg focus:outline-none focus:ring-0
     transition
     duration-150
     ease-in-out
