--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -12,13 +12,14 @@
       justify-center
     "
   >
-    <div class="max-w-xs text-center lg:text-left">
-      <div class="text-4xl font-extrabold mb-2">
-        {{ i18n "homeSocialTitle" }}
-      </div>
-      <p class="text-lg text-normal opacity-60">
-        {{ i18n "homeSocialDescription" }}
-      </p>
+    <div class="max-w-xs">
+      {{ partial "components/section-title"
+      (dict
+      "title" (i18n "homeSocialTitle")
+      "anchor" "socials"
+      "margin" "mb-2"
+      "fontSize" "text-2xl" ) }}
+      <p class="opacity-60">{{ i18n "homeSocialDescription" }}</p>
     </div>
 
     <div class="max-w-md flex flex-row flex-wrap gap-3 justify-center">
