--- a/themes/custom-blist/layouts/partials/homepage/support.html
+++ b/themes/custom-blist/layouts/partials/homepage/support.html
@@ -12,9 +12,12 @@
     "
   >
     <div class="flex flex-col items-center">
-      <div class="text-4xl font-extrabold mb-3">
-        {{ i18n "homeSupportTitle" }}
-      </div>
+      {{ partial "components/section-title"
+      (dict
+      "title" (i18n "homeSupportTitle")
+      "anchor" "supports"
+      "margin" "mb-3"
+      "fontSize" "text-4xl" ) }}
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-xl">
