--- a/themes/custom-blist/layouts/_default/single.html
+++ b/themes/custom-blist/layouts/_default/single.html
@@ -26,9 +26,26 @@
 </div>
 {{ end }}
 
-<article class="prose lg:prose-lg mx-auto my-8 dark:prose-dark px-4">
+<article class="prose max-w-4xl lg:prose-lg mx-auto my-8 dark:prose-dark px-4">
   <h1 class="text-2xl font-bold mb-2">{{ .Title }}</h1>
   <h5 class="text-sm flex items-center">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="mr-1"
+      width="16"
+      height="16"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <circle cx="12" cy="7" r="4"></circle>
+      <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
+    </svg>
+    {{ $.Param "author" }} &nbsp;&bull;&nbsp;
     <svg
       xmlns="http://www.w3.org/2000/svg"
       class="mr-1"
@@ -69,33 +86,13 @@
       <circle cx="12" cy="12" r="9" />
       <polyline points="12 7 12 12 15 15" />
     </svg>
-    {{ i18n "readingTime"}}{{ .ReadingTime }}&nbsp;{{ i18n "readTime" }}
-    &nbsp;&bull;
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="mx-1"
-      width="16"
-      height="16"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-      <path d="M3 19a9 9 0 0 1 9 0a9 9 0 0 1 9 0" />
-      <path d="M3 6a9 9 0 0 1 9 0a9 9 0 0 1 9 0" />
-      <line x1="3" y1="6" x2="3" y2="19" />
-      <line x1="12" y1="6" x2="12" y2="19" />
-      <line x1="21" y1="6" x2="21" y2="19" />
-    </svg>
-    {{ .WordCount }}&nbsp;{{ i18n "words" }} {{ if .IsTranslated -}} {{-
-    $sortedTranslations := sort .Translations "Site.Language.Weight" -}} {{-
-    $links := apply $sortedTranslations "partial" "translation_link.html" "."
-    -}} {{- $cleanLinks := apply $links "chomp" "." -}} {{- $linksOutput :=
-    delimit $cleanLinks (i18n "translationsSeparator") -}} &nbsp;&bull;&nbsp;{{
-    i18n "translationsLabel" }}&nbsp;{{ $linksOutput }} {{- end }}
+    {{ i18n "readingTime"}}{{ .ReadingTime }}&nbsp;{{ i18n "readTime" }} &nbsp;
+    {{ if .IsTranslated -}} {{- $sortedTranslations := sort .Translations
+    "Site.Language.Weight" -}} {{- $links := apply $sortedTranslations "partial"
+    "translation_link.html" "." -}} {{- $cleanLinks := apply $links "chomp" "."
+    -}} {{- $linksOutput := delimit $cleanLinks (i18n "translationsSeparator")
+    -}} &nbsp;&bull;&nbsp;{{ i18n "translationsLabel" }}&nbsp;{{ $linksOutput }}
+    {{- end }}
   </h5>
 
   {{ .Content }}
