refactor: move i18n to dedicated file

--- a/themes/custom-blist/layouts/_default/events.html
+++ b/themes/custom-blist/layouts/_default/events.html
@@ -23,8 +23,8 @@
       justify-center
     "
   >
-    <div class="text-5xl font-black">{{ .Site.Params.pages.events.title }}</div>
-    <div class="text-lg">{{ .Site.Params.pages.events.subtitle }}</div>
+    <div class="text-5xl font-black">{{ i18n "eventsTitle" }}</div>
+    <div class="text-lg">{{ i18n "eventsDescription" }}</div>
   </div>
 
   <div class="flex flex-row flex-wrap gap-6 justify-center">
