--- a/themes/custom-blist/layouts/partials/homepage/posts.html
+++ b/themes/custom-blist/layouts/partials/homepage/posts.html
@@ -14,7 +14,7 @@
   >
     <div class="flex flex-col items-center">
       <div class="text-4xl font-extrabold mb-3">
-        {{ .Site.Params.homepage.posts.title }}
+        {{ i18n "homePostsTitle" }}
       </div>
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16 mb-2"></div>
     </div>
