--- a/themes/custom-blist/layouts/partials/homepage/team.html
+++ b/themes/custom-blist/layouts/partials/homepage/team.html
@@ -13,14 +13,11 @@
     "
   >
     <div class="flex flex-col items-center">
-      <div class="text-4xl font-extrabold mb-3">
-        {{ .Site.Params.homepage.team.title }}
-      </div>
+      <div class="text-4xl font-extrabold mb-3">{{ i18n "homeTeamTitle" }}</div>
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3">
-      Avec plus de 1200 membres sur la page meetup, notre association et ses
-      évènements sont organisés par une équipe de bénévoles féru de crypto.
+      {{ i18n "homeTeamDescription"}}
     </div>
     <div class="flex flex-row flex-wrap gap-11 justify-center">
       <div class="flex flex-col items-center justify-center">
@@ -45,7 +42,7 @@
       </div>
       <div class="flex flex-col items-center justify-center">
         <img src="/images/team/bpr.jpg" class="max-w-xxs rounded-full mb-2" />
-        Bertrand Presles
+        Bertrand PRESLES
       </div>
     </div>
   </div>
