--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -4,14 +4,12 @@
   >
     <div class="flex flex-col items-center">
       <div class="text-4xl font-extrabold mb-3 text-center">
-        {{ .Site.Params.homepage.events.title }}
+        {{ i18n "homeEventsTitle" }}
       </div>
       <div class="rounded bg-black-900 dark:bg-white h-2 w-16"></div>
     </div>
     <div class="text-lg text-normal text-center mb-3 max-w-4xl">
-      Retrouvez les derniers évènements organisés par l'association. Chaque
-      année nous tentons d'en proposer une dizaine avec des contenus variés (
-      des impacts sociétaux jusqu'au fonctionnement technique ).
+      {{ i18n "homeEventsDescription" }}
     </div>
     <div
       class="flex flex-row flex-wrap items-center justify-center gap-8 w-full"
@@ -20,8 +18,8 @@
       "components/event-card.html" . }} {{ end }}
     </div>
     <a href="events">
-      {{ partial "components/button" (dict "label"
-      .Site.Params.homepage.events.allBtn ) }}
+      {{ partial "components/button" (dict "label" (i18n "homeEventsAllBtn") )
+      }}
     </a>
   </div>
 </section>
