--- a/themes/custom-blist/layouts/partials/homepage/social.html
+++ b/themes/custom-blist/layouts/partials/homepage/social.html
@@ -13,10 +13,8 @@
     "
   >
     <div class="max-w-xs">
-      <div class="text-2xl font-bold mb-2">
-        {{ .Site.Params.homepage.social.title }}
-      </div>
-      <p class="opacity-60">{{ .Site.Params.homepage.social.description }}</p>
+      <div class="text-2xl font-bold mb-2">{{ i18n "homeSocialTitle" }}</div>
+      <p class="opacity-60">{{ i18n "homeSocialDescription" }}</p>
     </div>
     <ul class="flex flex-wrap justify-center gap-4">
       {{ with .Site.Params.social.twitter }}
