--- a/themes/custom-blist/layouts/partials/components/event-card.html
+++ b/themes/custom-blist/layouts/partials/components/event-card.html
@@ -74,7 +74,7 @@
       {{ end }}
     </div>
     <a
-      href="{{ .link }}"
+      href="{{ .url }}"
       rel="noopener noreferrer"
       target="_blank"
       class="mt-2"
